<resources>
    <string name="app_name">Tinkoff-HR</string>
    <string name="test">This is text</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_faq">FAQ</string>
    <string name="title_notifications">Notifications</string>
    <string name="address">Адрес</string>
    <string name="get_pass">Как получить пропуск?</string>
    <string name="steps_arrival">Что делать после прибытия?</string>
    <string name="contacts">Контакты</string>
    <string name="text_basic_information">В Екатеринбурге мы организуем митапы по направлениям: Angular, Scala, Android. Спикеры - сотрудники ТЦРа и внешние докладчики. Если у тебя есть тема для доклада, то ты всегда можешь об этом сказать Елене Калетиной или Саше. Мы ходим и участвуем на конференциях. Наши докладчики из ТЦРа выступали уже на Dump, Pycon.</string>
    <string name="what_do_speaker">Что делать потенциальному спикеру?</string>
    <string name="text_1_listener_information">1. Не менее, чем за 2 месяца сообщить Елене Калетиной или Хромову Олегу, а также тимлиду, какие темы тебе интересны и чем это будет полезно для проекта.</string>
    <string name="text_2_listener_information">2. Совместное решение о полной или частичной оплате конференции.</string>
    <string name="text_1_what_do_speaker">1. Обсуждение с HR;</string>
    <string name="text_2_what_do_speaker">2. Подача доклада на конференцию/митап</string>
    <string name="title_basic_information">Основная информация</string>
    <string name="listener_information">Информация для слушателя</string>
    <string name="write_codeword">Введите кодовое слово</string>
    <string name="send">Отправить</string>
    <string name="partners_tinkoff">Партнеры Tinkoff</string>
    <string name="sale_partners">Скидки от партнеров</string>
    <string name="try_again">Попробуйте снова</string>
    <string name="successful_codeword">Кодовое слово введено верно!</string>
    <string name="search">Поиск</string>
    <string name="title_workers">Сотрудники</string>
    <string name="worker_full_name">ФИО:</string>
    <string name="worker_function">Должность:</string>
    <string name="worker_project">Проект:</string>
    <string name="achievement">Ачивки</string>
    <string name="email">Почта</string>
    <string name="function">Должность</string>
    <string name="project">Проект</string>
    <string name="about">О себе</string>
    <string name="full_name">ФИО</string>
    <string name="writeFullName">Введите фамилию и имя</string>
    <string name="title_where_eat">Где поесть?</string>
    <string name="yes">Да</string>
    <string name="add">Добавить</string>
    <string name="reviews">Отзывы</string>
    <string name="pluses">ПЛЮСЫ</string>
    <string name="average_cost">СРЕДНЯЯ СТОИМОСТЬ</string>
    <string name="business_lunch">БИЗНЕС ЛАНЧ</string>
    <string name="num_2">2.0</string>
    <string name="space">Космос</string>
    <string name="ivan_ivanov">Иванов Иван</string>
    <string name="text_dialog_eatery">Поделитесь своим мнением с другими сотрудниками</string>
    <string name="write_review">Введите текст отзыва</string>
    <string name="close">Закрыть</string>
    <string name="save">Сохранить</string>
    <string name="title_activity_parking">ParkingActivity</string>
    <string name="enter_address">Введите адрес</string>
    <string name="allow_location">Разрешите доступ к вашему местоположению</string>
    <string name="gps_on">GPS включён, можете повторить попытку</string>
    <string name="app_not_determine_location">Приложение не сможет определить ваше местоположение</string>
    <string name="turn_on_gps_app_determine_location">включите GPS, чтобы приложение определило ваще местоположение</string>
    <string name="empty_field_reviews_message">Ой, похоже другие пользователи ещё не оценили заведение ...</string>
    <string name="orders">Заказы</string>
    <string name="tribute">Социальное</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ios">IOS</string>
    <string name="frontend">Frontend</string>
    <string name="scala">Scala</string>
    <string name="pastaEducation">информация об образовательной программе информация об образовательной программе информация об образовательной программе</string>
    <string name="meetup">Meetup’s</string>
    <string name="meetupBigInfo">В Екатеринбурге мы организуем митапы по направлениям: Angular, Scala, Android.\nСпикеры - сотрудники ТЦРа и внешние докладчики. Если у тебя есть тема для доклада, то ты всегда можешь об этом сказать Елене Калетиной или Саше.</string>
    <string name="meetupSmallLeft">Хочется выступить в роли спикера?</string>
    <string name="meetupSmallRight">Или быть слушателем на встрече?</string>
    <string name="src_tinkoff_scala">https://www.tinkoff.ru/career/it/scala/</string>
    <string name="src_tinkoff_frontend">https://www.tinkoff.ru/career/it/frontend/</string>
    <string name="src_tinkoff_ios">https://fintech.tinkoff.ru/study/fintech/ios/</string>
    <string name="text_meetup_info_left">1. Обсуждение с HR;\n\n2. Подача доклада на конференцию/митап</string>
    <string name="text_meetup_info_right">1. Не менее, чем за 2 месяца сообщить Елене Калетиной или Хромову Олег, а также тимлиду, какие темы тебе интересны и чем это будет полезно для проекта.\n\n2. Совместное решение о полной или частичной оплате конференции.</string>
    <string name="to_order">Заказать</string>
    <string name="text_confirm_products">Подтвердите выбранные позиции</string>
    <string name="confirm">Подтвердить</string>
    <string name="text_no_order">В данный момент у Вас нет заказанных товаров</string>
    <string name="basket">Корзина</string>
    <string name="code_field_stub">Введите код</string>
    <string name="count_down_timer_stub">Осталось:</string>
    <string name="send_code_stub">Отправить код</string>
    <string name="check_code_stub">Проверить код</string>
    <string name="button_save_stub">Сохранить</string>
    <string name="button_register_stub">Зарегистрироваться</string>
</resources>
