<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_workers">

    <fragment
        android:id="@+id/navigation_workers"
        android:name="com.example.tinkoff_hr.ui.workers.WorkersFragment"
        android:label="@string/title_workers"
        tools:layout="@layout/fragment_workers" />

    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.example.tinkoff_hr.ui.faq.FaqFragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/navigation_where_eat"
        android:name="com.example.tinkoff_hr.ui.where_eat.WhereEatFragment"
        android:label="@string/title_where_eat"
        tools:layout="@layout/fragment_where_eat" />
</navigation>