<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_stars"
    tools:context=".ui.authentication.CodeFragment">

    <EditText
        android:id="@+id/code_field"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:hint="@string/code_field_stub"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:textSize="25sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintBottom_toTopOf="@id/count_down_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/count_down_timer"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@color/white"
        android:text="@string/count_down_timer_stub"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_send_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_field" />

    <Button
        android:id="@+id/button_send_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/send_code_stub"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/button_check_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/count_down_timer" />

    <Button
        android:id="@+id/button_check_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_code_stub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_send_code" />

</androidx.constraintlayout.widget.ConstraintLayout>